--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script type="module" src="./src/TicTacToe.js"></script>
     <script type="module" src="./src/TicTacToeController.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>aitorfi - Tic Tac Toe</title>
   </head>
 
   <body>
